// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing Table Tests fill in details for a route: updated route 1`] = `
<div>
  <div
    class="portConfigTable"
  >
    <form>
      <div
        class="FieldArray--container"
      >
        <div
          class="Layout--horizontal StyledProps--main FieldArray--title"
        >
          <span
            class="FieldArray--text"
          />
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-id="btn-add"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Add
            </span>
          </button>
        </div>
        <table
          cellspacing="0"
        >
          <thead>
            <tr>
              <th>
                PROTOCOL
              </th>
              <th>
                PORT
              </th>
              <th>
                ACTION
              </th>
              <th>
                TARGET PROTOCOL
              </th>
              <th>
                TARGET PORT
              </th>
              <th>
                REDIRECT URL
              </th>
              <th>
                SERVER NAME
              </th>
              <th>
                PATH MATCH
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="https"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="bp3-overlay bp3-overlay-inline"
                  />
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="81"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="Forward"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="https"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="bp3-overlay bp3-overlay-inline"
                  >
                    <div
                      class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                      style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                    >
                      <div
                        class="bp3-popover bp3-minimal bp3-select-popover Select--popover"
                        style="transform-origin: center top;"
                      >
                        <div
                          class="bp3-popover-content"
                        >
                          <div>
                            <ul
                              class="bp3-menu"
                            >
                              <li
                                class="Select--menuItem Select--active"
                              >
                                <p
                                  class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                  style="--text-line-clamp: 1;"
                                >
                                  http
                                </p>
                              </li>
                              <li
                                class="Select--menuItem"
                              >
                                <p
                                  class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                  style="--text-line-clamp: 1;"
                                >
                                  https
                                </p>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="8081"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      style="margin-bottom: 0px;"
                      type="text"
                      value="redirect_url"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="server_name"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      data-testid="routingRules"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="[object Object]"
                    />
                  </div>
                </div>
              </td>
              <td
                class="FieldArray--deleteColumn"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  data-id="btn-delete"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="main-trash"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 20"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </form>
  </div>
</div>
`;

exports[`Routing Table Tests render additional columns for redirection rule 1`] = `
<div>
  <div
    class="portConfigTable"
  >
    <form>
      <div
        class="FieldArray--container"
      >
        <div
          class="Layout--horizontal StyledProps--main FieldArray--title"
        >
          <span
            class="FieldArray--text"
          />
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-id="btn-add"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Add
            </span>
          </button>
        </div>
        <table
          cellspacing="0"
        >
          <thead>
            <tr>
              <th>
                PROTOCOL
              </th>
              <th>
                PORT
              </th>
              <th>
                ACTION
              </th>
              <th>
                TARGET PROTOCOL
              </th>
              <th>
                TARGET PORT
              </th>
              <th>
                REDIRECT URL
              </th>
              <th>
                SERVER NAME
              </th>
              <th>
                PATH MATCH
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="http"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="80"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="Redirect"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="bp3-overlay bp3-overlay-inline"
                  >
                    <div
                      class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                      style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                    >
                      <div
                        class="bp3-popover bp3-minimal bp3-select-popover Select--popover"
                        style="transform-origin: center top;"
                      >
                        <div
                          class="bp3-popover-content"
                        >
                          <div>
                            <ul
                              class="bp3-menu"
                            >
                              <li
                                class="Select--menuItem Select--active"
                              >
                                <p
                                  class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                  style="--text-line-clamp: 1;"
                                >
                                  Redirect
                                </p>
                              </li>
                              <li
                                class="Select--menuItem"
                              >
                                <p
                                  class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                  style="--text-line-clamp: 1;"
                                >
                                  Forward
                                </p>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="http"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="8080"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="updated_redirect_url"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="updated_server_name"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      data-testid="routingRules"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="[object Object]"
                    />
                  </div>
                </div>
              </td>
              <td
                class="FieldArray--deleteColumn"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  data-id="btn-delete"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="main-trash"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 20"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </form>
  </div>
</div>
`;

exports[`Routing Table Tests render table with default columns 1`] = `
<div>
  <div
    class="portConfigTable"
  >
    <form>
      <div
        class="FieldArray--container"
      >
        <div
          class="Layout--horizontal StyledProps--main FieldArray--title"
        >
          <span
            class="FieldArray--text"
          />
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-id="btn-add"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Add
            </span>
          </button>
        </div>
        <table
          cellspacing="0"
        >
          <thead>
            <tr>
              <th>
                PROTOCOL
              </th>
              <th>
                PORT
              </th>
              <th>
                ACTION
              </th>
              <th>
                TARGET PROTOCOL
              </th>
              <th>
                TARGET PORT
              </th>
              <th>
                REDIRECT URL
              </th>
              <th>
                SERVER NAME
              </th>
              <th>
                PATH MATCH
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="http"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="80"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="Forward"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="bp3-popover-wrapper selectCell Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="http"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      min="0"
                      style="margin-bottom: 0px;"
                      type="number"
                      value="8080"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      style="margin-bottom: 0px;"
                      type="text"
                      value="redirect_url"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="server_name"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      data-testid="routingRules"
                      style="margin-bottom: 0px;"
                      type="text"
                      value="routing_rules"
                    />
                  </div>
                </div>
              </td>
              <td
                class="FieldArray--deleteColumn"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  data-id="btn-delete"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="main-trash"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 20"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </form>
  </div>
</div>
`;
